Custom Hook is Loaded & reviews are shown in home

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,10 +4,10 @@
 
 nav a {
     text-decoration: none;
-    margin-right: 10px;
-    color: green;
+    margin-right: 35px;
+    color: black;
 }
 
 nav a:hover {
-    color: darkgreen;
+    color: deepskyblue;
 }
