--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,7 @@
 .nav-container {
     text-align: center;
+    background-color: rgb(198, 216, 223);
+    padding: 15px;
 }
 
 nav a {
@@ -9,5 +11,5 @@ nav a {
 }
 
 nav a:hover {
-    color: deepskyblue;
+    color: rgb(58, 166, 202);
 }
