--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,5 +11,17 @@ nav a {
 }
 
 nav a:hover {
-    color: rgb(58, 166, 202);
+    color: rgb(58, 166, 202) !important;
+}
+
+@media screen and (max-width:568px) {
+    .nav-container {
+        width: 100%;
+        padding: 5px;
+    }
+
+    nav a {
+        margin-right: 20px;
+    }
+
 }
