--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -5,3 +5,11 @@
     margin-left: 300px;
     margin-top: 30px;
 }
+
+@media screen and (max-width:568px) {
+    .reviews {
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: 70px;
+        gap: 20px;
+    }
+}
