--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,3 +2,9 @@
     margin-left: 800px;
     margin-top: 30px;
 }
+
+@media screen and (max-width:568px) {
+    .about-container {
+        margin-left: 0px;
+    }
+}
